# nao_basic

./: .gitignore  CMakeLists.txt  README.md  bt.txt  bt_graspandthrow.txt  mainpage.dox  manifest.xml  package.xml  servers
include/nao_basic/: ball_tracker_common.h  motions_common.h  robot_config.h
msg/: activity.msg  confirmation.msg
scripts/: basic_opengl_python.py  gauss_linking_integral.py  greedy_rrt.py  nao_pose.py  normal_rrt.py  planner.py  tf2pose.py
src/bt/: action_dispatcher_bt.cpp  ball_grasper_bt.cpp  ball_kicker_bt.cpp  ball_thrower_bt.cpp  ball_tracker_bt.cpp  entangler_bt.cpp  goto_waypoint_bt.cpp  goto_waypoint_standalone.cpp  hand_mover22nd_bt.cpp  hand_mover2_bt.cpp  hand_mover_bt.cpp  led_shine_bt.cpp  mission_failed_bt.cpp  move_down_bt.cpp  move_left_bt.cpp  move_right_bt.cpp  move_up_bt.cpp  template_bt.cpp  walker2nd_bt.cpp  walker_bt.cpp
src/common/: ball_tracker_common.cpp  motions_common.cpp  robot_config.cpp
src/test/: ball_detector.cpp
